--- a/ux.html
+++ b/ux.html
@@ -42,7 +42,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o7xebfwN&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nAbbrMwE'>ServiceNow Careers - Director, UX</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA  San Diego</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='http://seegrid.applytojob.com/apply/YV0UGbegBR/UX-Designer'>UX Designer - Seegrid - Career Page</a></h5> 
@@ -67,13 +67,13 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://take1.recruitee.com/o/experience-designer-produto-aux0319'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://take1.recruitee.com/o/experience-designer-produto-aux0319'>
       Experience Designer (Produto) AUX0319 - Take
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PulseCommerce/743999698684818-ux-graphic-design-intern'>Pulse Commerce UX / Graphic Design Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PulseCommerce/743999698684818-ux-graphic-design-intern'>Pulse Commerce UX / Graphic Design Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -129,7 +129,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585279'>Stellenangebot: UX Designer (m/w/d) im eGovernment-Umfeld (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585279'>Stellenangebot: UX Designer (m/w/d) im eGovernment-Umfeld (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -171,7 +171,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZkafwG&__jvst=Employee+Referral&__jvsd=s1Nspgwq&__jvsc=Twitter&bid=nvJbqMw6'>ServiceNow Careers - Lead UX Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZkafwG&__jvst=Employee+Referral&__jvsd=s1Nspgwq&__jvsc=Twitter&bid=nvJbqMw6'>ServiceNow Careers - Lead UX Architect</a></h5> 
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California  San Diego, CA Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -235,13 +235,13 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25484-Senior-UI-UX-Designer?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25484-Senior-UI-UX-Designer?source=feed'>
       Senior UI/UX Designer at Insiten - Atlanta, GA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://interactive-tools.join.com/jobs/469469-ux-designer-digital-konzepter-w-m-d-in-berliner-digitalagentur'>Job @ interactive tools   (Berlin): UX Designer / ... | JOIN</a></h5> 
+<h5><a href='https://interactive-tools.join.com/jobs/469469-ux-designer-digital-konzepter-w-m-d-in-berliner-digitalagentur'>Job @ interactive tools   (Berlin): UX Designer / ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -281,7 +281,7 @@
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  San Francisco, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
       UI/UX Designer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -297,7 +297,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands  Amsterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/roivantsciences/jobs/1934444'>Job Application for Product UI/UX Designer at Roivant Sciences</a></h5> 
+<h5><a href='https://boards.greenhouse.io/roivantsciences/jobs/1934444'>Job Application for Product UI/UX Designer at Roivant Sciences</a></h5> 
 <p><span class="badge badge-light">New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -327,7 +327,7 @@
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698522300-senior-ui-ux-engineer-data-engineering-5-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (5-month Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698522300-senior-ui-ux-engineer-data-engineering-5-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (5-month Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -335,7 +335,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -351,7 +351,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585024'>Stellenangebot: UX Designer (d/m/w) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585024'>Stellenangebot: UX Designer (d/m/w) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -381,7 +381,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/1893493'>Job Application for Product Designer (UI/UX) at Arundo Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/1893493'>Job Application for Product Designer (UI/UX) at Arundo Analytics</a></h5> 
 <p><span class="badge badge-light">Oslo, Norway  Oslo, Norway Houston, TXPalo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
